--- a/smartdiet/pubspec.yaml
+++ b/smartdiet/pubspec.yaml
@@ -10,10 +10,14 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
-  google_fonts: ^6.1.0
+  dio: ^5.4.0
+  shared_preferences: ^2.2.2
+  provider: ^6.1.1
+  flutter_secure_storage: ^9.0.0
+  intl: ^0.19.0
   fl_chart: ^0.66.0
   image_picker: ^1.0.7
-  intl: ^0.19.0
+  google_fonts: ^6.1.0
   http: ^1.2.0
 
 dev_dependencies:
