--- a/smartdiet/pubspec.yaml
+++ b/smartdiet/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   image_picker: ^1.0.7
   google_fonts: ^6.1.0
   http: ^1.2.0
+  google_sign_in: ^6.1.0
 
 dev_dependencies:
   flutter_test:
